--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 ext {
+	set('otelVersion', "1.17.0")
 	set('springCloudVersion', "2021.0.3")
 }
 
@@ -24,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-config-server'
 
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
