--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,13 +27,20 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: onfigprops, env, health, heapdump, info, loggers, mappings, prometheus
   endpoint:
     health:
       show-details: always
       show-components: always
       probes:
         enabled: true
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
   metrics:
     tags:
       application: ${spring.application.name}
